for search - replace

--- a/single_beam_notes.tex
+++ b/single_beam_notes.tex
@@ -76,7 +76,7 @@
 % Title Page
 \setcounter{page}{1}
 \begin{center}
-{\huge \doctitle}\footnote{Document source at \url{https://bitbucket.org/brian_bingham/ocean_notes/src/master/single_beam_notes.tex}}
+{\huge \doctitle}\footnote{Document source at \url{https://www.overleaf.com/read/tcxjgnmqphwj} and \url{https://github.com/bsb808/OceanNotes}}
 \end{center}
 
 %\begin{abstract}
@@ -223,7 +223,7 @@ For each simulated beam, Gazebo should provide the set of ordered pairs of echo 
 
 
 \setcounter{page}{1}
-\bibliographystyle{../latexlib/ieee/IEEEtran}
-\bibliography{../latexlib/bib/bbing_master}
+\bibliographystyle{IEEEtran}
+\bibliography{bbing_master}
 
 \end{document}
