Updates from Overleaf

--- a/bbing_master.bib
+++ b/bbing_master.bib
@@ -6817,4 +6817,80 @@ Mitigating strategies for improving the controller performance are proposed and 
   year      = {1995},
 }
 
+@Article{sonnenburg13modeling,
+  author  = {Sonnenburg, Christian R. and Woolsey, Craig A.},
+  title   = {Modeling, Identification, and Control of an Unmanned Surface Vehicle},
+  journal = {Journal of Field Robotics},
+  year    = {2013},
+  volume  = {30},
+  number  = {3},
+  pages   = {371--398},
+  issn    = {1556-4967},
+  doi     = {10.1002/rob.21452},
+  url     = {http://dx.doi.org/10.1002/rob.21452},
+}
+
+@TechReport{sonnenburg10control,
+  author      = {C. Sonnenburg and A. Gadre and D. Hornerand S. Krageland and A. Marcus and D. J. Stilwell and C. A. Woolsey},
+  title       = {CONTROL-ORIENTED PLANAR MOTION MODELING OF UNMANNED SURFACE VEHICLES},
+  institution = {Virginia Center for Autonomous Systems},
+  year        = {2010},
+  owner       = {bsb},
+  timestamp   = {2016.12.13},
+}
+
+@PhdThesis{blanke81ship,
+  author    = {M. Blanke},
+  title     = {Ship propulsion losses related to automated steering and prime mover control},
+  year      = {1981},
+  owner     = {bsb},
+  school    = {The Technical University of Denmark,.},
+  timestamp = {2016.12.15},
+}
+
+@Article{caccia08practical,
+  author   = {Caccia, M. and Bruzzone, G. and Bono, R.},
+  title    = {A Practical Approach to Modeling and Identification of Small Autonomous Surface Craft},
+  journal  = {Oceanic Engineering, IEEE Journal of},
+  year     = {2008},
+  volume   = {33},
+  number   = {2},
+  month    = {April},
+  pages    = {133-145},
+  issn     = {0364-9059},
+  doi      = {10.1109/JOE.2008.920157},
+  abstract = {This paper discusses the theoretical model of an autonomous surface craft (ASC) with respect to the performance of basic sensors usually available onboard small and relatively low- cost vessels. The aim is to define a practical model and the corresponding identification procedure for simulation, guidance, and control of this class of vehicles. The work is supported by the extended at-sea trials carried out with the autonomous catamaran prototype Charlie2005.},
+  keywords = {identification, marine vehicles, mobile robotsCharlie2005, autonomous catamaran prototype, identification procedure, marine robotics, small autonomous surface craft},
+}
+
+@Article{caccia00guidance,
+  author   = {M. Caccia and G. Veruggio},
+  title    = {Guidance and control of a reconfigurable unmanned underwater vehicle},
+  journal  = {Control Engineering Practice},
+  year     = {2000},
+  volume   = {8},
+  number   = {1},
+  pages    = {21 - 37},
+  issn     = {0967-0661},
+  doi      = {http://dx.doi.org/10.1016/S0967-0661(99)00125-2},
+  url      = {http://www.sciencedirect.com/science/article/pii/S0967066199001252},
+  abstract = {The problem of designing, implementing and testing a general-purpose guidance and control system for unmanned underwater vehicles for scientific applications is addressed in this paper. A three-level hierarchical architecture is proposed in order to uncouple the execution of user-defined motion-task functions with respect to the operating environment (guidance), from linear and angular speed control and mapping of the required control actions onto the actuation system. The introduction of PI-type task functions enables a conventional Lyapunov-based guidance system to counteract the effects both of unmodelled, i.e. unmeasured kinematic interactions between the vehicle and the environment, and of bias in velocity measurements. The vehicle dynamics are managed by conventional gain scheduling regulators performing velocity control, while an advanced actuator model, which considers propeller–hull interactions, improves the precision of the thrust to propeller rate mapping. Preliminary tests, carried out in a high-diving pool with an over-actuated prototype ROV, proved the system's functionality and showed high performances in terms of its precision in accomplishing near bottom slow motion tasks, e.g. altitude and hovering control and trajectory tracking, even when the mapping of the required control actions onto the actuation system is reconfigured to face any type of thruster fault. },
+  keywords = {Control},
+}
+
+@Article{caccia98acoustic,
+  author   = {M. Caccia and G. Casalino and R. Cristi and G. Veruggio},
+  title    = {Acoustic motion estimation and control for an unmanned underwater vehicle in a structured environment},
+  journal  = {Control Engineering Practice},
+  year     = {1998},
+  volume   = {6},
+  number   = {5},
+  pages    = {661 - 670},
+  issn     = {0967-0661},
+  doi      = {http://dx.doi.org/10.1016/S0967-0661(98)00057-4},
+  url      = {http://www.sciencedirect.com/science/article/pii/S0967066198000574},
+  abstract = {The problem of identification and navigation, guidance and control in unmanned underwater vehicles (UUVs) is addressed in this paper. A task-function-based guidance system and an acoustic motion estimation module have been integrated with a conventional UUV autopilot within a two-layered hierarchical architecture for closed-loop control. Basic techniques to estimate the robot dynamics using the sensors mounted on the vehicle have been investigated. The proposed identification techniques and navigation, guidance and control (NGC) system have been tested on Roby2, a UUV developed at the Istituto Automazione Navale of the Italian C.N.R. The experimental set-up, as well as the modalities and results, are discussed.},
+  keywords = {Underwater vehicles},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
